# TradingAssistant

./: .env  .gitignore  main.py  pyproject.toml  rxconfig.py
docs/: 20260613-ui-design.html  20260615-todo-list.html  frontend-chart-verification.md  local-startup-and-websocket-notes.md  增强版看盘系统架构设计.html
openspec/changes/build-memory-first-market-monitor/: design.md  proposal.md  tasks.md
openspec/changes/fix-terminal-hover-and-left-rail-alignment/: design.md  proposal.md  tasks.md
openspec/changes/land-reflex-chart-frontend/: design.md  proposal.md  tasks.md
reflex.lock/: package-lock.json  package.json
tests/: __init__.py  test_charting.py  test_events.py  test_frontend.py  test_indicators.py  test_infrastructure.py  test_market_data.py  test_runtime_and_upgrade.py  test_transport.py
tradingassistant/: __init__.py  diagnostics.py  events.py  redis_upgrade.py  runtime.py  settings.py
tradingassistant/backend/: __init__.py  diagnostics.py  redis_upgrade.py  runtime.py
tradingassistant/charting/: __init__.py  aggregator.py  history.py  keys.py  models.py
tradingassistant/frontend/: __init__.py  app.py  charting.py  models.py  renders.py  state.py  studies.py  theme.py  utils.py
tradingassistant/indicators/: __init__.py  engine.py
tradingassistant/infrastructure/: __init__.py  cache.py  subscription_registry.py  topic_bus.py
tradingassistant/market_data/: __init__.py  contracts.py  gateway.py  normalizer.py
tradingassistant/transport/: __init__.py  app.py  ws_alert.py  ws_chart.py  ws_helpers.py  ws_quote.py
(+60 files in other folders)
