[project]
name = "tradingassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "itick-sdk>=0.1.0",
    "opentrade>=1.1.0",
    "python-dotenv>=1.1.1",
    "reflex>=0.9.4",
    "uvicorn>=0.49.0",
]
