[project]
name = "tradingassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "itick-sdk>=0.1.0",
    "opentrade>=1.2.0",
    "python-dotenv>=1.1.1",
    "reflex>=0.9.4",
    "uvicorn>=0.49.0",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "SIM", "C", "PL"]
ignore = [
    "D400",
    "D415",
    "RUF002",
    "E501",
    "PLR2004",
    "PLR0911",
    "PLR0913",
    "PLR0912",
]

[tool.ruff.lint.per-file-ignores]
"tradingassistant/frontend/models.py" = ["PLR0915"]
"tradingassistant/frontend/renders.py" = ["C901", "PLR0915"]
"tradingassistant/frontend/charting.py" = ["F401", "E402"]
